Modificando ejemplo e index.html

--- a/proyecto-git/frozenyogurtshop/ejemplo.html
+++ b/proyecto-git/frozenyogurtshop/ejemplo.html
@@ -55,7 +55,8 @@
 					<p>If you’re experiencing issues or having concerns about this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forums/">on our forum</a> and meet other people in the community who share the same interests.</p>
 				</div>
 				<div class="article">
-					<h1>We Have Free Templates For Everyone</h1>
+					<h1>Trabajo GIT</h1>
+					<h1>Miguel Valle y Ruben Gomez</h1>
 					<p>Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What’s more, they’re absolutely free! You can do a lot with them. You can modify them.</p>
 					<p>You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/terms/">Terms of Use</a>. You can even remove all our links if you want to.</p>
 					<h1>We Have More Templates For You</h1>
