--- a/proyecto-git/frozenyogurtshop/index.html
+++ b/proyecto-git/frozenyogurtshop/index.html
@@ -50,8 +50,8 @@
 			<div class="body">
 				<div>
 					<div>
-						<h1>NEW PRODUCT</h1>
-						<h2>The Twist of Healthy Yogurt</h2>
+						<h1>Trabajo GIT</h1>
+						<h2>Miguel Valle y Ruben Gomez</h2>
 						<p>This website template has been designed by freewebsitetemplates.com for you, for free. You can replace all this text with your own text.</p>
 					</div>
 					<img src="images/yogurt.jpg" alt="">
